src/App.scss
/* Import Inter Font */
@import url('https://rsms.me/inter/inter.css');
$font-family-base: 'Inter', sans-serif;

// Colors
$today-color: #FF006E;
$tomorrow-color: #FB5607;
$thisWeek-color: #FFBE0B;
$noDate-color: #9D9FA7;
$completed-color: #03CEA4;

/* Base Styles */
body {
  background-color: #F9FAFC !important;
}
.description,
.description .form-control {
  font-size: 1.5rem;
  color: #0A1323 !important;
}
.lists .description {
  padding-left: 0 !important;
}

/* Logo */
header {
  margin: 2em auto;  
}
header h1 {
  padding: 0.625rem 0 0.625rem 3.75rem;
  width: 6.375rem;
  background: url(/images/logo.svg) no-repeat left center;
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 1.8rem;
  letter-spacing: -0.02em;
  margin: auto;
}

/* General Forms */
button {
  border: none;
  background: none;
}
// .invisible {
//   opacity: 0;
//   position: absolute;
// }
// Hide screen reader labels
.invisible,
.sr-only {
  clip: rect(0 0 0 0);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}
// Input Focus
*:focus {
  border: 0 !important;
  box-shadow: none !important;
}
// Placeholder text
$placeholder-text: #848791;
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: $placeholder-text;
}
::-moz-placeholder { /* Firefox 19+ */
  color: $placeholder-text;
}
:-ms-input-placeholder { /* IE 10+ */
  color: $placeholder-text;
}
:-moz-placeholder { /* Firefox 18- */
  color: $placeholder-text;
}
// Timeframe select list
.time-frame {
  border-radius: 6.25rem !important;
  border-width: 0 !important;
}
.today .time-frame {
  background: rgba(255, 0, 110, 0.08);
  color: $today-color;
}
.tomorrow .time-frame {
  background: rgba(251, 86, 7, 0.08);
  color: $tomorrow-color;
}
.thisWeek .time-frame {
  background: rgba(255, 190, 11, 0.08);
  color: $thisWeek-color;
}
.noDate .time-frame {
  background: #F9FAFB;
  color: #6B6F7C;
}
.completed .time-frame {
  background: rgba(3, 206, 164, 0.04);
  color: $completed-color
}

/* General layout */
.col.last {
  text-align: right;
}

/* New Todo form */
#newTodo {
  padding: 1.2rem;
  background: #FFFFFF;
  box-shadow: 0px 4px 8px #EBEEF5;
  border-radius: 12px;
}
#newTodo:focus-within {
  box-shadow: 0px 4px 32px #DAE0EC;
}
#newTodo.today:focus-within {
  box-shadow: 0px 4px 32px rgba(255, 0, 110, 0.12);
}
#newTodo.tomorrow:focus-within {
  box-shadow: 0px 4px 32px rgba(251, 86, 7, 0.12);
}
#newTodo.thisWeek:focus-within {
  box-shadow: 0px 4px 32px rgba(255, 190, 11, 0.12);
}
#newTodo .description {
  padding-left: 1.5rem;
}
input[type=text].form-control {
  border: none !important;
} 
#newTodo .time-frame {
  margin: 0.375rem 0.75rem; // Match form-control padding
}
#newTodo .btn {
  border-radius: 50%;
  border: 0;
  width: 3rem;
  height: 3rem;
  padding: 0;
  // background: url(/images/plus-circle.svg) no-repeat center center;
  background: none;
}
// Plus color
#newTodo .btn .plus {
  stroke: #9D9FA7;
}
#newTodo.today .btn .plus,
#newTodo.tomorrow .btn .plus,
#newTodo.thisWeek .btn .plus,
#newTodo.noDate .btn .plus {
  stroke: white;
}
// Circle color
#newTodo .btn .plus-circle {
  fill: #F9FAFB;
}
#newTodo.today .btn .plus-circle {
  fill: $today-color;
}
#newTodo.tomorrow .btn .plus-circle {
  fill: #FB5607;
}
#newTodo.thisWeek .btn .plus-circle {
  fill: #FFBE0B;
}
#newTodo.noDate .btn .plus-circle {
  fill: #3D404B;
}


/* Todo Lists */
.lists {
  margin-top: 3.5rem;
}
.lists h2 {
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 2.25rem;
  letter-spacing: -0.02em;
  padding: 0 0 0 4rem;
  margin-bottom: 0;
}
.lists .heading {
  padding: 1.56rem;
}
.list {
  background: #FFFFFF;
  box-shadow: 0px 4px 8px #EBEEF5;
  border-radius: 12px;
}
.list .count {
  font-size: 1.125rem;
  color: #6B6F7C;
}
.today h2 {
  color: $today-color;
  background: url(/images/inbox.svg) no-repeat left center;
  fill: $today-color;
}
.tomorrow h2 {
  color: $tomorrow-color;
  background: url(/images/sun.svg) no-repeat left center;
  fill: $tomorrow-color;
}
.thisWeek h2 {
  color: $thisWeek-color;
  background: url(/images/calendar.svg) no-repeat left center;
  fill: $thisWeek-color;
}
.noDate h2 {
  color: $noDate-color;
  background: url(/images/folder.svg) no-repeat left center;
  fill: $noDate-color;
}
.completed h2 {
  color: $completed-color;
  background: url(/images/check-circle.svg) no-repeat left center;
  fill: $completed-color;
}


// header h1 {
//   padding: 0.625rem 0 0.625rem 3.75rem;
//   width: 6.375rem;
//   background: url(/images/logo.svg) no-repeat left center;
//   font-weight: 600;
//   font-size: 1.5rem;
//   line-height: 1.8rem;
//   letter-spacing: -0.02em;
//   margin: auto;
// }



/* Completed */
#complete-container.hide .completed {
  display: none;
}
#complete-container.show .completed {
  display: block;
}
#complete-container h3 {
  font-size: 1.125rem;
  color: #3B424E;
  text-align: center;
  margin: 3rem 0;
}
#complete-container h3 a,
#complete-container h3 a:visited {
  text-decoration: none;
  color: #3B424E;
}

#complete-container h3.none {
  color: #848791;
}

/* Todo */
.list ul {
  list-style-type: none;
  padding: 0;
}
.todo {
  padding: 1.2rem 1.2rem 1.2rem 1.5rem;
}
.complete-todo {
  margin-left: 1.25rem;
  padding-left: 0 !important;
  max-width: 4rem !important;
}
.complete {
  width: 2.25rem;
  height: 2.25rem;
  background-color: white;
  border: 2px solid #E4E8F1;
  border-radius: 50%;
  display: inline-block;
}
.completed .complete {
  border-color: $completed-color;
}


// Import Bootstrap and its default variables
@import '~bootstrap/scss/bootstrap.scss';

